project page add

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "framer-motion": "^12.12.1",
+    "grap": "^1.0.0",
+    "lenis": "^1.3.3",
     "next": "15.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
